--- a/css.css
+++ b/css.css
@@ -49,20 +49,7 @@ input:focus{
 
 
 
-#two{
-    border: 1px solid;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    padding: 20px;
-    width:60vw;
-    background-color: whitesmoke;
-    border-radius: 0px 50px 0px 50px;
-    box-shadow: 10px 10px 5px black;
-}
+
 #three>input{
     margin: 10px;
     padding: 10px;
@@ -72,11 +59,7 @@ input:focus{
     border-bottom-style: solid;
     width:45vw;
 }
-#two>h1{
-    text-align: center;
-    color: blue;
-    text-decoration-line: underline;
-}
+
 input:focus{
     outline: 0;
 }
@@ -236,5 +219,14 @@ ul li {
     top: 0;
   }
   
+  #two{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+
+  }
 
   
